# P-ai

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  README.md  archives.html  chat.html  file-reader.html  index.html  package.json  pnpm-lock.yaml  quick-setup.html  runtime-logs.html  sidebar.html  tsconfig.json  vite.config.ts
.cargo/: config.toml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  file-reader.json  runtime-logs.json
src-tauri/icons/: icon.icns
src-tauri/resources/preset-skills/agent-office/: SKILL.md
src-tauri/resources/preset-skills/assistant-interaction-guide/: SKILL.md
src-tauri/resources/preset-skills/browser-automation/: SKILL.md
src-tauri/resources/preset-skills/code-review/: SKILL.md
src-tauri/resources/preset-skills/mcp-setup/: SKILL.md
src-tauri/resources/preset-skills/memory-generation/: SKILL.md
src-tauri/resources/preset-skills/news-analyst/: SKILL.md
src-tauri/resources/preset-skills/pai-guide/: SKILL.md
src-tauri/resources/preset-skills/private-organization-guide/: SKILL.md
src-tauri/resources/preset-skills/skill-setup/: SKILL.md
src-tauri/resources/preset-skills/task-guide/: SKILL.md
src-tauri/resources/preset-skills/workspace-guide/: SKILL.md
src-tauri/resources/prompts/: archive-reflection.md  summary-context.md
src-tauri/src/: main.rs
src-tauri/src/features/: delegate.rs  remote_im.rs  remote_im_adapters.rs  skill.rs  task.rs  tests.rs
src-tauri/src/features/chat/: conversation.rs  conversation_prompt_service.rs  message_semantics.rs  model_runtime.rs  prompt_manager.rs  scheduler.rs  tests.rs
src-tauri/src/features/chat/conversation_service/: archive.rs  core.rs  delegate.rs  mod.rs  mutations.rs  persistence.rs  reads.rs  remote_im.rs  scheduler.rs  types.rs
src-tauri/src/features/chat/message_store/: jsonl_snapshot.rs  manifest.rs  meta.rs  migration.rs  paths.rs  persist.rs  store.rs
src-tauri/src/features/chat/model_runtime/: provider_and_stream.rs  runtime_abstractions.rs  runtime_migration_guard.rs  tools_and_builtin.rs
src-tauri/src/features/chat/model_runtime/provider_and_stream/: anthropic.rs  deepseek.rs  gemini.rs  openai_style.rs  prompt_build.rs  router.rs  screenshot_cache.rs  stream_collect.rs  tool_assembly.rs  tool_loop.rs  types.rs  vision.rs
src-tauri/src/features/chat/model_runtime/tools_and_builtin/: builtin_delegate.rs  builtin_local_image.rs  builtin_meme.rs  builtin_memory.rs  builtin_network.rs  builtin_plan.rs  builtin_remote_im.rs  builtin_runtime_context.rs  builtin_task.rs  builtin_task_delegate.rs  core_provider.rs  core_provider_calls.rs  core_provider_gemini.rs  core_provider_utils.rs  delegate_dispatch.rs  delegate_runtime.rs  tool_arg_types.rs  tool_impls.rs
src-tauri/src/features/config/: app_data_layout.rs  storage_and_stt.rs  tests.rs
src-tauri/src/features/core/: domain.rs  time_semantics.rs
src-tauri/src/features/core/domain/: constants.rs  http_identity.rs  remote_customer_service_defaults.rs  runtime.rs  runtime_cache.rs  runtime_defaults.rs  runtime_lock.rs  runtime_organization.rs  runtime_state.rs  runtime_types.rs  types.rs  types_chat.rs  types_config.rs  types_foundation.rs  types_requests.rs  types_storage.rs
src-tauri/src/features/delegate/: conversation_store.rs  domain.rs  runtime.rs  store.rs
src-tauri/src/features/mcp/: commands.rs  parser.rs  runtime_manager.rs  types.rs  workspace.rs
src-tauri/src/features/memory/: chat_history_search.rs  matcher.rs  store.rs  tests.rs
src-tauri/src/features/memory/providers/: factory.rs
src-tauri/src/features/memory/store/: archive_feedback.rs  crud.rs  db.rs  import_export.rs  maintenance.rs  ownership.rs  provider_index.rs  tests.rs  types.rs
src-tauri/src/features/remote_im/: channel_store.rs  dingtalk_stream.rs  feishu_sdk.rs  napcat_ws.rs  onebot_v11_ws.rs  tests.rs  weixin_oc.rs
src-tauri/src/features/remote_im/dingtalk_stream/: auth.rs  inbound.rs  media.rs  runtime.rs
src-tauri/src/features/remote_im/onebot_v11_ws/: api.rs  inbound.rs  lifecycle.rs  media.rs  models.rs  parsing.rs  runtime.rs  transport.rs
src-tauri/src/features/remote_im/weixin_oc/: api.rs  core.rs  inbound.rs  login.rs  media.rs  runtime.rs
src-tauri/src/features/skill/: commands.rs  private_org.rs  types.rs  workspace.rs
src-tauri/src/features/system/: commands.rs  record_hotkey_probe.rs  tests.rs  tools.rs  updater.rs  windowing.rs
src-tauri/src/features/system/commands/: archive_commands.rs  archive_host_selector.rs  archive_io_commands.rs  archive_pipeline.rs  archive_prompt_contract.rs  archive_summary_parser.rs  chat_and_runtime.rs  codex_auth.rs  config_and_persona.rs  debug_log_commands.rs  desktop_tools.rs  ide_context.rs  inference_gateway.rs  json_extractor.rs  memory_commands.rs  memory_provider_commands.rs  prompt_assembly.rs  tool_review.rs
src-tauri/src/features/system/commands/chat_and_runtime/: aliyun_multimodal_cache.rs  attachments_io.rs  core.rs  core_commands.rs  core_helpers.rs  core_send_inner.rs  model_providers.rs  models_and_media.rs  models_catalog.rs  stt_transcribe.rs  tool_catalog.rs  tools_and_cache.rs
src-tauri/src/features/system/commands/config_and_persona/: conversation_snapshot_api.rs  git_ghost_snapshot.rs  message_store_migration.rs  migration.rs  persona_and_chat_settings.rs  unarchived_conversations.rs  window_and_update.rs
src-tauri/src/features/system/commands/context_compaction/: prompt_contract.rs
src-tauri/src/features/system/commands/conversation_archive/: prompt_contract.rs
src-tauri/src/features/system/sandbox/: backend_windows.rs  manager.rs  policy.rs  types.rs
src-tauri/src/features/system/services/: mod.rs  pdf_text_service.rs
src-tauri/src/features/system/tools/: operate_actions.rs  operate_mcp.rs  operate_parser.rs  operate_runner.rs  patch.rs  patch_rewind.rs  read_file.rs  read_file_mcp.rs  screenshot.rs  screenshot_mcp.rs  terminal.rs  text_codec.rs  todo_mcp.rs  types.rs  wait.rs  xcap_screenshot.rs
src-tauri/src/features/task/: commands.rs  domain.rs  scheduler.rs  store.rs  tests.rs
(+417 files in other folders)
