[package]
name = "easy-call-ai"
version = "0.3.2"
edition = "2021"
description = "Easy Call AI desktop app"
default-run = "easy-call-ai"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
time = { version = "=0.3.36", features = ["local-offset"] }
rig = { package = "rig-core", version = "0.31.0", features = ["rmcp"] }
rmcp = { version = "0.13.0", features = ["client", "macros", "transport-child-process", "transport-io", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.11.27", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
async-openai = { version = "0.33.0", default-features = false, features = ["rustls", "chat-completion", "byot"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
uuid = { version = "1", features = ["v4"] }
scraper = "0.20"
urlencoding = "2.1"
webbrowser = "1.0"
futures-util = "0.3"
sse-stream = "0.2"
sha2 = "0.10"
aho-corasick = "1.1"
enigo = "0.6"
arboard = "3"
webp = "0.3"
captis = "0.6"
xcap = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
jieba-rs = "0.7"
tantivy = "0.22"
font-kit = "0.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
httpmock = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
rdev = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
rdev = "0.5"
