[package]
name = "easy-call-ai"
version = "0.9.59"
edition = "2021"
description = "P-ai desktop app"
default-run = "p-ai"

[[bin]]
name = "p-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chardetng = "0.1"
encoding_rs = "0.8"
toml = "0.8"
directories = "5"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
time = { version = "0.3.47", features = ["local-offset"] }
rmcp = { version = "1.5.0", features = ["client", "macros", "transport-child-process", "transport-io", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
dingtalk-stream = "0.1.5"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "multipart", "query", "form", "rustls"] }
async-openai = { version = "0.34.0", default-features = false, features = ["rustls", "chat-completion", "byot"] }
genai = { git = "https://github.com/jeremychone/rust-genai", rev = "13a7348bba1538d45b808a9b0feb1090a4f650b4" }
base64 = "0.22"
aes = "0.8"
md5 = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
scraper = "0.20"
rs-trafilatura = "0.2"
urlencoding = "2.1"
webbrowser = "1.0"
futures-util = "0.3"
sse-stream = "0.2"
sha2 = "0.10"
pdf_oxide = { version = "0.3.33", default-features = false }
hayro = "0.5.0"
aho-corasick = "1.1"
enigo = "0.6"
arboard = "3"
webp = "0.3"
rayon = "1.10"
tiktoken-rs = "0.7"
captis = "0.6"
xcap = "0.9.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tantivy = "0.26.0"
font-kit = "0.14"
chrono = { version = "0.4", features = ["serde"] }
undoc = "0.1.8"
litchi = { git = "https://github.com/DevExzh/litchi.git", rev = "5a931961d58bf71c6bb5b7e82f450bda34349e3d" }
walkdir = "2.5.0"
zip = { version = "8.5.1", default-features = false, features = ["deflate", "aes-crypto"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = false
codegen-units = 16
strip = true
debug = false

[dev-dependencies]
httpmock = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
rdev = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
rdev = "0.5"
